# libSMTPClient

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  sample.c
src/: smtp_client.c  smtp_client.h
